# zukus

./: .gitignore  .mcp.json  AGENTS.md  AGENTS.md.bak  ANALISIS_ARQUITECTURA.md  CGEConver.md  CLAUDE.md.bak  package.json  tsconfig.json  turbo.json
.claude/: settings.json
.cursor/agents/: architecture-analyst.md  coordinator.md  task-decomposer.md  test-launcher.md
.cursor/commands/: compact.md  create-command.md  just.md  learn.md  next-phase.md  reflect.md  unsure.md
.cursor/rules/: dominio-core.mdc  multiplataforma.mdc  observabilidad-grafana.mdc  proyecto-contexto.mdc  server.mdc  verificacion-humano.mdc
apps/foundry/: README.md  package.json  system.json  template.json  tsconfig.json  vite.config.ts
apps/mobile/: app.json  package.json
apps/server/: .dockerignore  Dockerfile  fly.toml  package.json
apps/zukus/: app.json  babel.config.js  metro.config.js  package.json  vitest.config.ts
apps/zukus/desktop/: Cargo.toml  tauri.conf.json
apps/zukus/desktop/capabilities/: default.json
apps/zukus/desktop/icons/: icon.icns
apps/zukus/desktop/src/: commands.rs  lib.rs  main.rs
cge/: magicoFuria.html
monorepo-plan/: README.md
monorepo-plan/docs/: cge-entity-pools-design.md  navegacion-sistema.md  pixel-dice-integration-plan.md  supabase-react-native-plan.md  (+2 more)
plans/: unified-navigation-system.md
scripts/: convert-d35e-to-entities.ts  convert-srd-to-entities.ts  generate-d35e-item-lists.ts  grafana-traces.ts  import-d35e-compendiums.ts  migrate-icons-to-supabase.ts  migrate-spell-images.ts  migrate-srd-items.ts  rulesync.ts
(+620 files in other folders)
