[package]
name = "zukus-desktop"
version = "0.1.0"
description = "Zukus - D&D Character Manager"
authors = ["Zukus"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "zukus_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
